init project with layout and haeder, footer

--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -1,1 +1,11 @@
-<p>default-layout works!</p>
+<div class="layout">
+  <header>
+    <h1>this is header</h1>
+  </header>
+
+  <main>
+    <router-outlet />
+  </main>
+
+  <footer>this is footer</footer>
+</div>
