admin dashboard paginate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<div *ngIf="isLoading" class="spinner-container">
+  <mat-spinner></mat-spinner>
+  <!-- Hiển thị spinner khi đang tải -->
+</div>
 <router-outlet />
