--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "ngx-toastr/toastr";
+
+html,
+body {
+  height: 100%;
+  @apply h-full;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
