--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -1,11 +1,47 @@
-<div class="layout">
-  <header>
-    <h1>this is header</h1>
-  </header>
+<div class="flex h-full">
+  <aside class="w-64 bg-gray-800 text-white flex flex-col">
+    <div class="p-4 text-2xl font-bold border-b border-gray-700">Dashboard</div>
+    <div class="flex-1 mt-4">
+      <ul class="space-y-2">
+        <li>
+          <a
+            routerLink="/admin-dashboard"
+            routerLinkActive="bg-gray-700 rounded-md"
+            class="block px-4 py-2 hover:bg-gray-700 hover:rounded-md"
+            >Admin Dashboard</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/history-action-view"
+            routerLinkActive="bg-gray-700 rounded-md"
+            class="block px-4 py-2 hover:bg-gray-700 hover:rounded-md"
+            >Actions View</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/user-dashboard"
+            routerLinkActive="bg-gray-700 rounded-md"
+            class="block px-4 py-2 hover:bg-gray-700 hover:rounded-md"
+            >User Dashboard</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="p-4">
+      <li class="list-none">
+        <a
+          routerLink="/sign-in"
+          routerLinkActive="bg-gray-700 rounded-md"
+          class="block px-4 py-2 hover:bg-gray-700 hover:rounded-md"
+          >Log out</a
+        >
+      </li>
+    </div>
+  </aside>
 
-  <main>
-    <router-outlet />
-  </main>
-
-  <footer>this is footer</footer>
+  <div class="flex-1 bg-gray-100 p-6">
+    <router-outlet></router-outlet>
+  </div>
 </div>
