--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -26,7 +26,7 @@
               />
               <fa-icon
                 [icon]="faService.icons.faMagnifyingGlass"
-                class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 cursor-pointer"
+                class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 cursor-pointer mt-2"
               >
               </fa-icon>
             </mat-form-field>
