--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,2 +1,145 @@
-<p>user-dashboard works!</p>
-<button mat-raised-button color="primary">Click Me!</button>
+<div>
+  <div class="flex justify-between w-full items-center">
+    <div>
+      <h3 class="text-[10px] font-semibold">User | Connection</h3>
+    </div>
+    <div class="flex justify-between items-center gap-5">
+      <div>
+        <button
+          mat-flat-button
+          class="mb-[18px]"
+          (click)="handleCreateConnect()"
+        >
+          <fa-icon [icon]="faService.icons.faPlus"></fa-icon>
+        </button>
+      </div>
+      <div>
+        <button
+          mat-flat-button
+          class="mb-[18px]"
+          (click)="goToConnectionTrash()"
+        >
+          Connection trash
+        </button>
+      </div>
+      <div>
+        <form class="example-form">
+          <div class="relative">
+            <mat-form-field class="example-full-width">
+              <mat-label>Search</mat-label>
+              <input
+                matInput
+                placeholder="Enter information..."
+                value="Search information"
+                class="w-full border border-gray-300 rounded-md pl-4 pr-12 py-2 focus:outline-none"
+              />
+              <fa-icon
+                [icon]="faService.icons.faMagnifyingGlass"
+                class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 cursor-pointer mt-2"
+              >
+              </fa-icon>
+            </mat-form-field>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="idFirst">
+      <th mat-header-cell *matHeaderCellDef>First IP</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.idFirst }}">{{ element.idFirst }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="portSource">
+      <th mat-header-cell *matHeaderCellDef>Port Source</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.portSource }}">{{
+          element.portSource
+        }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="idLast">
+      <th mat-header-cell *matHeaderCellDef>Last IP</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.idLast }}">{{ element.idLast }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="portTo">
+      <th mat-header-cell *matHeaderCellDef>Port To</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.portTo }}">{{ element.portTo }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="pending">
+      <th mat-header-cell *matHeaderCellDef>Pending</th>
+      <td mat-cell *matCellDef="let element" class="">
+        <fa-icon
+          class="ml-[20px]"
+          [icon]="
+            element.pending === 1
+              ? faService.icons.faEyeSlash
+              : faService.icons.faEye
+          "
+        >
+        </fa-icon>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="moderator">
+      <th mat-header-cell *matHeaderCellDef>Moderator</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.moderator }}">{{
+          element.moderator
+        }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="note">
+      <th mat-header-cell *matHeaderCellDef>Note</th>
+      <td mat-cell *matCellDef="let element" class="truncate-note">
+        <span matTooltip="{{ element.note }}">{{ element.note }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="updatedAt">
+      <th mat-header-cell *matHeaderCellDef>Date Time</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.updatedAt | date : "short" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="handleUpdateConnect(element)">
+          <fa-icon [icon]="faService.icons.faEdit"></fa-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="warn"
+          (click)="handleSoftDeleteConnect(element.id)"
+        >
+          <fa-icon [icon]="faService.icons.faTrash"></fa-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    [length]="totalItems"
+    [pageSize]="8"
+    [pageSizeOptions]="[5, 8, 10, 25, 100]"
+    showFirstLastButtons
+    (page)="onPageChange($event)"
+  >
+  </mat-paginator>
+</div>
