project is done

--- a/src/app/layouts/unauthorized/unauthorized.component.html
+++ b/src/app/layouts/unauthorized/unauthorized.component.html
@@ -1,1 +1,4 @@
-<p>unauthorized works!</p>
+<div class="unauthorized-container">
+  <h1>Unauthorized</h1>
+  <p>You do not have permission to view this page.</p>
+</div>
