--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -32,7 +32,7 @@
     <div class="p-4">
       <li class="list-none">
         <a
-          (click)="logOut()"
+          (click)="signOut()"
           class="block px-4 py-2 hover:bg-gray-700 hover:rounded-md cursor-pointer"
           >Log out</a
         >
