--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
@@ -2,6 +2,11 @@ table {
   width: 100%;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
 .example-form {
   min-width: 300px;
   max-width: 350px;
